class_name StatsPanel    extends Control

@onready var atk_number: Label = %atkNumber
@onready var str_number: Label = %strNumber
@onready var def_number: Label = %defNumber
@onready var con_number: Label = %conNumber
@onready var esp_number: Label = %espNumber
@onready var lck_number: Label = %lckNumber
